[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/GameView/BlackoutFilmBars.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/MainUI/LightB&WTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/MainUI/TitleFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Music/sawsquarenoise - Tittle Screen.ogg" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Backgrounds/TitleScreenCrownShyness.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/GameView/MirrorViewContainer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/GameView/TitleScreenScene.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="TitleScreenScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 277.32, -74.1501 )
theme = ExtResource( 2 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MirrorViewContainer" parent="." instance=ExtResource( 6 )]
current_scene = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.5
margin_top = 58.0
margin_right = 176.5
margin_bottom = 119.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 6
custom_constants/margin_left = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 347.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 3 )
text = "If God is Seven"
align = 1
valign = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 1 )

[node name="Panel2" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.5
margin_top = 126.0
margin_right = 176.5
margin_bottom = 151.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 6
custom_constants/margin_left = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel2/MarginContainer"]
margin_left = 6.0
margin_top = 4.0
margin_right = 347.0
margin_bottom = 20.0
text = "then this is 0.1.0"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel2"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 2 )

[node name="BlackoutFilmBars" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.0
margin_top = -148.0
margin_right = 69.0
margin_bottom = -58.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 138.0
margin_bottom = 22.0
focus_mode = 0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 138.0
margin_bottom = 56.0
focus_mode = 0
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 138.0
margin_bottom = 90.0
focus_mode = 0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -13.921
autoplay = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
